corect bug -hover on mobile stays black

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -42,8 +42,8 @@ body {
   border: none;
 }
 
-.card.invisible{
- visibility: hidden;
+.card.invisible {
+  visibility: hidden;
 }
 .card.backSide:hover {
   background-color: #34a0a4;
@@ -115,7 +115,7 @@ body {
     border-radius: 10%;
   }
   .card.backSide:hover {
-    background-color: rgb(22, 22, 22);
+    background-color: #34a0a4;
     height: 70px;
     width: 70px;
     margin: 5px;
